Try out prerender loader

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
-<meta charset=utf-8>
-<div id=root></div>
-<script src=main.js></script>
+<head>
+  <meta charset="UTF-8">
+  <title><%= htmlWebpackPlugin.options.title %></title>
+</head>
+<body>
+  <div id=root></div>
+</body>
